--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,8 @@ body { font-size:  16px; font-family: '나눔고딕'; line-height:1.5; color: #6
 .header_text h1 p {font-size: 48px;font-family: '나눔명조'; padding: 20px 0;}
 .header_text > p {font-size: 22.4px; }
 /* section구역 */
+
+#ourgallery, #aboutus, #chefmenu, #roadmap, #reservation {margin-top: 100px;}
 #section{
     background: url(../images/bg.jpg) repeat; position: relative;
 }
