--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,7 @@ body { font-size:  16px; font-family: '나눔고딕'; line-height:1.5; color: #6
 .header_text > p {font-size: 22.4px; }
 /* section구역 */
 
-#ourgallery, #aboutus, #chefmenu, #roadmap, #reservation {margin-top: 100px;}
+#ourgallery, #aboutus, #chefmenu, #roadmap, #reservation {padding-top: 120px !important; }
 #section{
     background: url(../images/bg.jpg) repeat; position: relative;
 }
